<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_gray_24"
        android:title="@string/home_title"
        />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/baseline_notifications_gray_24"
        android:title="@string/notifications_title"
        />
    <item
        android:id="@+id/messages"
        android:icon="@drawable/baseline_message_gray_24"
        android:title="@string/messages_title"
        />
    <item
        android:id="@+id/music"
        android:icon="@drawable/baseline_library_music_gray_24"
        android:title="@string/music_title"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_account_circle_gray_24"
        android:title="@string/profile_title"
        />
</menu>