<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageVerticalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageHorizonatalTopLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageHorizontalBottomLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />
    <ImageView
        android:id="@+id/detail_song_image"
        android:layout_width="144dp"
        android:layout_height="144dp"
        app:layout_constraintEnd_toStartOf="@id/imageVerticalLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHorizonatalTopLine"
        app:layout_constraintBottom_toTopOf="@id/imageHorizontalBottomLine"
        android:src="@drawable/baseline_library_music_gray_24"/>
    <TextView
        android:id="@+id/detail_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageVerticalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHorizonatalTopLine"
        app:layout_constraintBottom_toTopOf="@id/imageHorizontalBottomLine"
        android:text="@string/song_title"/>
    <TextView
        android:id="@+id/detail_artist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageVerticalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageHorizonatalTopLine"
        android:text="@string/artist_title"/>
    <TextView
        android:id="@+id/detail_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageVerticalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHorizontalBottomLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/album_title"/>

    <ImageButton
        android:id="@+id/toback_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/arrow_left_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageVerticalLine"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHorizontalBottomLine"
        app:layout_constraintVertical_bias="0.08" />


</androidx.constraintlayout.widget.ConstraintLayout>